objects/CMPL123__Sparta_Proactive_AI_Object_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Callouts_Per_Job__c</fullName>
        <defaultValue>15</defaultValue>
        <inlineHelpText>Defaults to 15: The maximum number of API calls allowed per job.</inlineHelpText>
        <label>Callouts Per Job</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object__c</fullName>
        <inlineHelpText>Select the object that you wish to configure Proactive Acceptance for.</inlineHelpText>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Objects</relationshipLabel>
        <relationshipName>Object</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123__Timeout__c</fullName>
        <defaultValue>10000</defaultValue>
        <inlineHelpText>Defaults to 10000. The maximum time (ms) allowed for each API call.</inlineHelpText>
        <label>Timeout</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sparta Proactive AI Object Settings</label>
    <pluralLabel>Sparta Proactive AI Object Settings</pluralLabel>
    <validationRules>
        <fullName>CMPL123__Callouts_Per_Job_Size</fullName>
        <active>true</active>
        <errorConditionFormula>(CMPL123__Callouts_Per_Job__c &lt; 1) || (CMPL123__Callouts_Per_Job__c &gt; 100)</errorConditionFormula>
        <errorDisplayField>CMPL123__Callouts_Per_Job__c</errorDisplayField>
        <errorMessage>Callout Per Job value must be between 1-100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123__Timeout_Size</fullName>
        <active>true</active>
        <errorConditionFormula>(CMPL123__Timeout__c &lt; 1) || (CMPL123__Timeout__c &gt; 120000)</errorConditionFormula>
        <errorDisplayField>CMPL123__Timeout__c</errorDisplayField>
        <errorMessage>Timeout value must be between 1-120000</errorMessage>
    </validationRules>
</CustomObject>